--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.2.15",
+        "@types/node": "^24.10.1",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "typescript": "^5.9.3",
+        "vue": "^3.5.24",
+        "vue-tsc": "^3.1.3"
     }
 }
