--- a/package.json
+++ b/package.json
@@ -1,25 +1,37 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
-    },
-    "dependencies": {
-        "@inertiajs/vue3": "^2.2.15",
-        "@types/node": "^24.10.1",
-        "@vitejs/plugin-vue": "^6.0.1",
-        "typescript": "^5.9.3",
-        "vue": "^3.5.24",
-        "vue-tsc": "^3.1.3"
-    }
+  "$schema": "https://json.schemastore.org/package.json",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint --ext .js,.ts,.vue .",
+    "lint:fix": "eslint --ext .js,.ts,.vue --fix .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "axios": "^1.11.0",
+    "concurrently": "^9.0.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.5.1",
+    "laravel-vite-plugin": "^2.0.0",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.0.0",
+    "vite": "^7.0.7",
+    "vue-eslint-parser": "^10.2.0"
+  },
+  "dependencies": {
+    "@inertiajs/vue3": "^2.2.15",
+    "@types/node": "^24.10.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "typescript": "^5.9.3",
+    "vue": "^3.5.24",
+    "vue-tsc": "^3.1.3"
+  }
 }
