feat(auth): add breeze for authentication

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "strict": true,
-    "jsx": "preserve",
-    "importHelpers": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
     "allowJs": true,
-    "lib": ["es2020", "dom", "dom.iterable"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["resources/js/*"]
-    },
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "jsx": "preserve",
+    "strict": true,
+    "isolatedModules": true,
+    "target": "ESNext",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "outDir": "./"
+    "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./resources/js/*"],
+      "ziggy-js": ["./vendor/tightenco/ziggy"]
+    }
   },
-  "include": [
-    "resources/js/**/*.ts",
-    "resources/js/**/*.d.ts",
-    "resources/js/**/*.tsx",
-    "resources/js/**/*.vue",
-    "resources/js/**/*.js",
-    "resources/js/**/*.jsx"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["resources/js/**/*.ts", "resources/js/**/*.vue"]
 }
