--- a/package.json
+++ b/package.json
@@ -4,27 +4,35 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc && vite build",
     "lint": "eslint --ext .js,.ts,.vue .",
     "lint:fix": "eslint --ext .js,.ts,.vue --fix .",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@inertiajs/vue3": "^2.0.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/vite": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "autoprefixer": "^10.4.12",
     "axios": "^1.11.0",
     "concurrently": "^9.0.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^10.5.1",
     "laravel-vite-plugin": "^2.0.0",
+    "postcss": "^8.4.31",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^5.6.3",
     "vite": "^7.0.7",
-    "vue-eslint-parser": "^10.2.0"
+    "vue": "^3.4.0",
+    "vue-eslint-parser": "^10.2.0",
+    "vue-tsc": "^2.0.24"
   },
   "dependencies": {
     "@inertiajs/vue3": "^2.2.15",
